# simod_rolls_detection

simod_camera/: CMakeLists.txt  package.xml
simod_camera/config/: rgbd.yaml
simod_camera/launch/: oak_d_pro.launch
simod_rolls_detection/: CMakeLists.txt  README.md  package.xml
simod_rolls_detection/Test Camera 03-06-25/: pose3.txt
simod_rolls_detection/Test Camera 07-05-25/: pose10.txt  pose11.txt  pose12.txt  pose13.txt  pose2.txt  pose3.txt  pose4.txt  pose5.txt  pose6.txt  pose7.txt  pose8.txt  pose9.txt
simod_rolls_detection/Test Camera 11-07-25/: pose0.txt  pose1.txt  pose2.txt  pose3.txt  pose4.txt
simod_rolls_detection/Test Camera 12-05-25/: pose0.txt
simod_rolls_detection/Test Camera 17-12-25/: pose0.txt  pose2.txt
simod_rolls_detection/Test Camera 17-12-25_2/: pose0.txt  pose1.txt
simod_rolls_detection/Test Camera 18-09-25/: pose0.txt  pose1.txt
simod_rolls_detection/Test Camera 18-11-25/: pose0.txt  pose1.txt  roll_packs copy.json  roll_packs.json
simod_rolls_detection/Test Camera 18-11-25_1/: pose0.txt
simod_rolls_detection/Test Camera 19-09-25_2/: pose0.txt
simod_rolls_detection/Test Camera 19-09-25_3/: camerainfo0.txt  pose0.txt  pose1.txt  pose2.txt
simod_rolls_detection/Test Camera 2-12-25/: pose0.txt  pose1.txt  pose2.txt  pose3.txt  pose4.txt
simod_rolls_detection/Test Camera 2-12-25_2/: pose0.txt  pose1.txt  pose2.txt  pose3.txt  pose4.txt  pose5.txt
simod_rolls_detection/Test Camera 29-07-25 Frontali/: pose0.txt  pose2.txt  pose3.txt  pose5.txt  pose6.txt  pose7.txt  pose8.txt  pose9.txt
simod_rolls_detection/Test Camera 29-07-25 Superiori/: pose0.txt  pose1.txt  pose2.txt  pose3.txt  pose4.txt  pose5.txt
simod_rolls_detection/Test Camera 29-07-25 Superiori Inclinate/: pose0.txt  pose1.txt  pose10.txt  pose11.txt  pose12.txt  pose13.txt  pose14.txt  pose2.txt  pose3.txt  pose4.txt  pose5.txt  pose6.txt  pose7.txt  pose8.txt  pose9.txt
simod_rolls_detection/action/: DetectCloseLine.action  DetectPacks.action  DetectPallet.action
simod_rolls_detection/config/: centralized_settings.yaml  vision_settings.yaml
simod_rolls_detection/data/: sollevamento_pacchi_reference2_points.txt
simod_rolls_detection/data/oak_d_pallet_detect/: camera_info.txt  expected_pallet_0.txt  initial_guess_0.txt  pose0.txt
simod_rolls_detection/files/input/: pack1_s1.stl  pack1_s2.stl  pack2_s1.stl  pack2_s2.stl  pack3_s1.stl  pack3_s2.stl  pack4_s1.stl  pack4_s2.stl  vision_poses.json
simod_rolls_detection/files/output/: box0_in_plate_center.json  box_pose_out.json  close_line_out.json  close_line_points.json  roll_packs.json
simod_rolls_detection/include/simod_rolls_detection/: filters.h  simod_vision_ctrl.h  ur_cobot.h  ur_cobot_utils.h  utils_rot.h
simod_rolls_detection/launch/: close_line_detection.launch  pallet_detection.launch  roll_packs_detection.launch  save_images.launch  simod_vision_ctrl.launch
simod_rolls_detection/pallet_detection/: CMakeLists.txt
simod_rolls_detection/pallet_detection/sift/: sift.cpp  sift.h
simod_rolls_detection/pallet_detection/src/: box.h  boxes_to_pallet_description.cpp  boxes_to_pallet_description.h  close_line_detection.cpp  close_line_detection.h  expected_pallet.h  pallet_detection.cpp  pallet_detection.h  pallet_detection_solver.cpp  pallet_detection_solver.h  pallet_from_image.cpp  pallet_from_image.h  pallet_ransac.cpp  pallet_ransac.h  roll_pack_detection.cpp  roll_pack_detection.h  roll_pack_detection_model.cpp  roll_pack_detection_model.h  roll_pack_pose_model.cpp  roll_pack_pose_model.h
simod_rolls_detection/pose_logs/: box_0_pose.csv  ur10_1_desired_frame.json  ur10_2_desired_frame.json
simod_rolls_detection/pose_logs_line_detection/: close_line_points_1756386912323924578.csv  close_line_points_1756387198694235592.csv  close_line_points_1756387401008873231.csv  close_line_points_1756387503440081332.csv  close_line_points_1756387554874570884.csv  close_line_points_1756387601388154519.csv  close_line_points_1756387727121872983.csv  close_line_points_1758266982158407170.csv  close_line_points_1758267302457910385.csv  close_line_points_1758269485888517921.csv  close_line_points_1758269495185527363.csv  close_line_points_1758269514062602514.csv  close_line_points_1758269652108275123.csv  close_line_points_1758269681806880534.csv  close_line_points_1758269716508675926.csv  close_line_points_1758269838962527321.csv  close_line_points_1758270956729577179.csv  close_line_points_1758270975872302148.csv  close_line_points_1758271371715602416.csv  close_line_points_1758271807439268991.csv  close_line_points_1758272149813672090.csv  close_line_points_1758272889791647446.csv
simod_rolls_detection/src/: close_line_detection_node.cpp  close_line_detection_test.cpp  filters.cpp  jsoncpp.cpp  pallet_detection_node.cpp  pallet_detection_test.cpp  roll_pack_detection_node.cpp  roll_pack_detection_test.cpp  save_images.cpp  simod_vision_ctrl.cpp  simod_vision_ctrl_node.cpp  ur_cobot.cpp  ur_cobot_utils.cpp  utils_rot.cpp
