<?xml version="1.0"?>
<package format="2">
  <name>simod_rolls_detection</name>
  <version>0.0.0</version>
  <description>The simod_rolls_detection package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>

  <export>

  </export>
</package>
